---
source: spade-tests/src/ast_lowering.rs
---
pipeline(1) pipe() -> bool {
    reg;
        true
}


error: Missing clock argument for pipeline
  ┌─ testinput:1:17
  │
1 │ pipeline(1) pipe() -> bool {
  │                 ^^
  │
  = note: All pipelines need to take at least a clock as an argument


